# diy-acura-bluetooth

./: .gitignore  .gitmodules  LICENSE  README.md
board_design/: .gitignore  audio.sch  bluetooth.sch  diy-acura-bluetooth-cache.lib  diy-acura-bluetooth.csv  diy-acura-bluetooth.kicad_pcb  diy-acura-bluetooth.net  diy-acura-bluetooth.pro  diy-acura-bluetooth.sch  diy-acura-bluetooth.xml  diy.lib  fp-lib-table  mbus_if.sch  power.sch  teensy.sch
board_design/diy-acura-bluetooth.pretty/: RN-52-BREAKOUT.kicad_mod  TO-251AA-TPAD.kicad_mod  diy-acura-bluetooth.net  mbus_conn.kicad_mod
cca/audio_only_cca/: .gitignore  audio_only.kicad_pcb  audio_only.pro  audio_only.sch  flatcam_readme.org
cca/control_cca/: control_cca.kicad_pcb  control_cca.pro  (+5 more)
common/: app_debug.c  app_debug.h  fifo.c  fifo.h
target_desktop/: CMakeLists.txt  nibbles_to_toggles.sh  nibbles_to_vcd.sh  run_nibbles_to_mbus_link_rx.sh  run_nibbles_to_mbus_phy_rx.sh  run_toggles_to_mbus_phy_rx.sh  run_toggles_to_mbus_phy_then_link_rx.sh  toggles_to_vcd.sh
target_desktop/captures/: bad_cap  play_and_skip_back  play_and_skip_back2x  play_and_skip_forward  repeat_button_pressing  startup_and_play  vcd_cap  vcd_cap_edited  vcd_cap_edited.gtkw  vcd_cap_edited.vcd
target_desktop/captures/decodes/: nocd_then_eject_shuttle_then_insert_shuttle_then_eject_then_2cd_insert_shuttle.txt
target_desktop/captures/toggles/: AM_FM_to_cdplayer_toggles.txt  OLD_app_demo_toggles.txt  OLD_app_demo_toggles.vcd  app_demo2_msgs.txt  app_demo2_toggles.txt  app_demo2_toggles.vcd  app_demo2_toggles_and_msgs.txt  app_demo_toggles.txt  app_demo_toggles.vcd  cd_changing.txt  nocd_but_shuttle_in_toggles.txt  nocd_no_shuttle_in_toggles.txt  nocd_then_eject_shuttle_then_insert_shuttle_then_eject_then_2cd_insert_shuttle.txt  powerup0_toggles.txt  powerup1_toggles.txt  powerup2_toggles.txt  powerup3_toggles.txt
target_desktop/py_lib/mbus/: __init__.py  nibble_link_rx_so.py  nibble_phy_rx_so.py  toggle_phy_rx_so.py  toggle_phy_then_link_rx_so.py
target_desktop/py_lib/mbus/mbusTime/: __init__.py  demo.py
target_desktop/py_lib/mbus/nibbles/: __init__.py  nibbles_to_toggles.py  nibbles_to_vcd.py
target_desktop/py_lib/mbus/toggles/: __init__.py  toggles_to_vcd.py
target_teensy3/: .gitignore  CMakeLists.txt  make.sh  program.sh
target_teensy3/src/: app_demo.cpp  app_demo_toggle_sniffer.cpp  bt_bridge.cpp  bt_demo.cpp  bt_toggle_sniffer.cpp  cca_test.cpp  mbus_main.cpp  mbus_msg_ping_reply.cpp  mbus_msg_sniffer.cpp  mbus_nibble_bridge.cpp  mbus_nibble_sniffer.cpp  mbus_toggle_bridge.cpp  mbus_toggle_sniffer.cpp  vcd_main.cpp
(+12 files in other folders)
